[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Extensions/KeyDisplay/KeyDisplay.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/KeyDisplay/Assets/Mouse.png" type="Texture" id=2]
[ext_resource path="res://src/Extensions/KeyDisplay/Assets/Middle.png" type="Texture" id=3]
[ext_resource path="res://src/Extensions/KeyDisplay/Assets/Side.png" type="Texture" id=4]

[node name="KeyDisplay" type="GridContainer"]
margin_right = 54.0
margin_bottom = 71.0
columns = 2
script = ExtResource( 1 )

[node name="History" type="Control" parent="."]

[node name="HistoryContainer" type="VBoxContainer" parent="History"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Spacer" type="ColorRect" parent="."]
margin_left = 4.0
margin_right = 54.0

[node name="Keys" type="Control" parent="."]
margin_top = 4.0
margin_bottom = 71.0

[node name="KeyContainer" type="HBoxContainer" parent="Keys"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
alignment = 2

[node name="Mouse" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 4.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 71.0
rect_min_size = Vector2( 50, 67 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Middle" type="TextureRect" parent="Mouse"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Left" type="TextureRect" parent="Mouse"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Right" type="TextureRect" parent="Mouse"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
flip_h = true
